<resources>
    <string name="app_name">Wadong</string>
    <string name="title_activity_maps">Map</string>

    <string name="all">전체</string>
    <string name="picture">사진</string>
    <string name="food">음식</string>
    <string name="movie">영화</string>
    <string name="book">책</string>
    <string name="found_luck">복주머니 발견!!</string>
    <string name="picture_description">사진은 찍는 것이 아니라 만드는 것이다.</string>
    <string name="food_description">치킨은 살 안쪄요 살은 내가 쪄요.</string>
    <string name="movie_description">영화 그 이상의 감동.</string>
    <string name="book_description">하루라도 책을 읽지 않으면 입안에 가시가 돋는다.</string>
    <string name="create_story">스토리 생성</string>
    <string name="search">검색</string>
    <string name="location">위치</string>
    <string name="my_location">내 위치</string>
    <string name="my_location_sample">서울시 용산구 청파로 77</string>
    <string name="comment">한마디...</string>
    <string name="select_picture">사진 선택</string>
    <string name="my_story">내 스토리</string>
    <string name="my_points">나의 복포인트</string>
</resources>
