<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.seunghyun.wadong.Category" />

        <variable
            name="vm"
            type="com.seunghyun.wadong.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    style="@style/CategoryTextButtonStyle"
                    android:onClick="@{() -> vm.onCategoryButtonClick(Category.ALL)}"
                    android:text="@string/all"
                    android:textColor="@{vm.selectedCategory == Category.ALL ? @color/colorPrimary : @android:color/darker_gray}" />

                <TextView
                    style="@style/CategoryTextButtonStyle"
                    android:onClick="@{() -> vm.onCategoryButtonClick(Category.PICTURE)}"
                    android:textColor="@{vm.selectedCategory == Category.PICTURE ? @color/colorPrimary : @android:color/darker_gray}"
                    android:text="@string/picture" />

                <TextView
                    style="@style/CategoryTextButtonStyle"
                    android:onClick="@{() -> vm.onCategoryButtonClick(Category.FOOD)}"
                    android:textColor="@{vm.selectedCategory == Category.FOOD ? @color/colorPrimary : @android:color/darker_gray}"
                    android:text="@string/food" />

                <TextView
                    style="@style/CategoryTextButtonStyle"
                    android:onClick="@{() -> vm.onCategoryButtonClick(Category.MOVIE)}"
                    android:textColor="@{vm.selectedCategory == Category.MOVIE ? @color/colorPrimary : @android:color/darker_gray}"
                    android:text="@string/movie" />

                <TextView
                    style="@style/CategoryTextButtonStyle"
                    android:onClick="@{() -> vm.onCategoryButtonClick(Category.BOOK)}"
                    android:textColor="@{vm.selectedCategory == Category.BOOK ? @color/colorPrimary : @android:color/darker_gray}"
                    android:text="@string/book" />
            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>